記事ページのレスポンシブ化完了

--- a/article.html
+++ b/article.html
@@ -31,7 +31,7 @@
     <!-- /ヘッダー -->
 
     <!-- メインコンテンツ -->
-    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-32">
+    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-16 sm:mb-32">
       <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
         <div class="text-xs text-gray-300 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
         <!-- PC版 -->
@@ -60,35 +60,36 @@
 
       <!-- 記事 -->
       <div class="col-start-2 col-end-9">
-        <div class="text-4xl border-b-4 border-black pl-4 pb-2 mb-4">私の名品 #03 作家 羽田圭介「こだわりの道具に身体を縛られる」</div>
+        <div class="text-xl sm:text-4xl border-b-4 border-black pl-4 pb-2 mb-4">私の名品 #03 作家 羽田圭介「こだわりの道具に身体を縛られる」</div>
         <div class="flex pl-4 mb-8">
-          <div class="h-8 w-8 bg-twitter bg-cover bg-center mr-4"></div>
-          <div class="h-8 w-8 bg-facebook bg-cover bg-center mr-4"></div>
-          <div class="h-8 w-8 bg-line bg-cover bg-center mr-4"></div>
-          <div class="h-8 w-8 bg-good bg-cover bg-center mr-4"></div>
+          <div class="h-8 w-8 bg-twitter bg-cover bg-center mr-8 sm:mr-4"></div>
+          <div class="h-8 w-8 bg-facebook bg-cover bg-center mr-8 sm:mr-4"></div>
+          <div class="h-8 w-8 bg-line bg-cover bg-center mr-8 sm:mr-4"></div>
+          <div class="h-8 w-8 bg-good bg-cover bg-center mr-8 sm:mr-4"></div>
         </div>
         <div class="px-4 mb-32">
-          <div class="h-96 bg-coffee bg-cover bg-center mb-16"></div>
-          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          <div class="h-56 sm:h-96 bg-coffee bg-cover bg-center mb-16"></div>
+          <div class="hidden sm:block mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             <br>
             <br>
             テキストテキストテキストテキストテキストテキストテキストテキスト
             <br>
             <br>
-            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
           </div>
+          <div class="sm:hidden mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
           <div class="text-2xl border-l-4 border-black pl-8 mb-16">書くことに専念できる「キングジム ポメラDM200」</div>
-          <div class="h-96 bg-flower bg-cover bg-center mb-16"></div>
+          <div class="hidden sm:block h-96 bg-flower bg-cover bg-center mb-16"></div>
           <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
-          <div class="text-2xl border-l-4 border-black pl-8 mb-16">原稿は必ず紙に ブラザー工業「モノクロレーザープリンター」</div>
-          <div class="h-96 bg-beach bg-cover bg-center mb-16"></div>
-          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          <div class="hidden sm:block text-2xl border-l-4 border-black pl-8 mb-16">原稿は必ず紙に ブラザー工業「モノクロレーザープリンター」</div>
+          <div class="hidden sm:block h-96 bg-beach bg-cover bg-center mb-16"></div>
+          <div class="hidden sm:block mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
             <br>
             <br>
             テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
           </div>
-          <div class="h-96 bg-avocado bg-cover bg-center mb-16"></div>
-          <div class="mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          <div class="hidden sm:block h-96 bg-avocado bg-cover bg-center mb-16"></div>
+          <div class="hidden sm:block mb-32">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
           <div class="flex justify-center pl-4 mb-8">
             <div class="h-8 w-8 bg-share bg-cover bg-center mr-4"></div>
             <div class="h-8 w-8 bg-twitter bg-cover bg-center mr-4"></div>
@@ -99,42 +100,186 @@
         </div>
 
         <!-- ライター -->
-        <div class="text-4xl border-b-4 border-black mb-8">WRITER</div>
+        <div class="text-xl font-bold sm:text-4xl border-b-4 border-black mb-8">WRITER</div>
         <div class="flex mb-20">
           <div class="w-5/6 pl-4">
             <div class="font-bold mb-2">ハピラフMAGAZINE編集部</div>
-            <div>誰かの「好き」が、ほかの誰かの「好き」を応援するようなメディアになりたいです。</div>
+            <div class="text-xs">誰かの「好き」が、ほかの誰かの「好き」を応援するようなメディアになりたいです。</div>
           </div>
           <div class="h-24 w-24 bg-baby bg-cover bg-center"></div>
         </div>
         <!-- /ライター -->
 
-        <!-- 関連記事 -->
-        <div class="text-4xl border-b-4 border-black mb-8">RELATED ARTICLES</div>
-        <div class="divide-y">
-          <div class="flex py-4">
-            <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
-            <div class="w-5/6 py-2 ml-4">
-              <div class="text-sm mb-4">テキストテキストテキストテキストテキスト</div>
-              <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+        <!-- PC版 -->
+        <div class="hidden sm:block">
+          <!-- 関連記事 -->
+          <div class="text-4xl border-b-4 border-black mb-8">RELATED ARTICLES</div>
+          <div class="divide-y">
+            <div class="flex py-4">
+              <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+              <div class="w-5/6 py-2 ml-4">
+                <div class="text-sm mb-4">テキストテキストテキストテキストテキスト</div>
+                <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+              </div>
+            </div>
+            <div class="flex py-4">
+              <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+              <div class="w-5/6 py-2 ml-4">
+                <div class="text-sm mb-4">テキストテキストテキストテキストテキスト</div>
+                <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+              </div>
+            </div>
+            <div class="flex py-4">
+              <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+              <div class="w-5/6 py-2 ml-4">
+                <div class="mb-4">テキストテキストテキストテキストテキスト</div>
+                <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+              </div>
+            </div>
+            <div class="flex py-4">
+              <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
+              <div class="w-5/6 py-2 ml-4">
+                <div class="mb-4">テキストテキストテキストテキストテキスト</div>
+                <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+              </div>
             </div>
           </div>
-          <div class="flex py-4">
-            <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
-            <div class="w-5/6 py-2 ml-4">
-              <div class="text-sm mb-4">テキストテキストテキストテキストテキスト</div>
-              <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
-            </div>
-          </div>
-          <div class="flex py-4">
-            <div class="h-24 w-1/6 bg-flower bg-cover bg-center"></div>
-            <div class="w-5/6 py-2 ml-4">
-              <div class="mb-4">テキストテキストテキストテキストテキスト</div>
-              <div class="text-xs text-gray-300">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
-            </div>
-          </div>
+          <!-- /関連記事 -->
         </div>
-        <!-- 関連記事 -->
+        <!-- /PC版 -->
+
+        <!-- SP版 -->
+        <div class="sm:hidden">
+          <!-- 関連記事 -->
+          <div class="text-xl font-bold sm:text-4xl border-b-4 border-black mb-8">RELATED ARTICLES</div>
+          <div class="grid grid-cols-2 gap-4 mb-20">
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-2/3 bg-white flex justify-center">
+                  <div class="text-xs text-red-300 text-center pt-2 pb-2">category</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-2/3 bg-white flex justify-center">
+                  <div class="text-xs text-red-300 text-center pt-2 pb-2">category</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-2/3 bg-white flex justify-center">
+                  <div class="text-xs text-red-300 text-center pt-2 pb-2">category</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-2/3 bg-white flex justify-center">
+                  <div class="text-xs text-red-300 text-center pt-2 pb-2">category</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+          </div>
+          <!-- /関連記事 -->
+
+          <!-- ランキング -->
+          <div class="text-xl font-bold sm:text-4xl border-b-4 border-black mb-8">RANKING</div>
+          <div class="grid grid-cols-2 gap-4 mb-20">
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-1/3 bg-black flex justify-center">
+                  <div class="text-xs text-white text-center pt-2 pb-2">1</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-1/3 bg-black flex justify-center">
+                  <div class="text-xs text-white text-center pt-2 pb-2">2</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-1/3 bg-black flex justify-center">
+                  <div class="text-xs text-white text-center pt-2 pb-2">3</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-1/3 bg-black flex justify-center">
+                  <div class="text-xs text-white text-center pt-2 pb-2">4</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+            <a href="/" class="mb-6">
+              <div class="h-40 bg-flower bg-cover bg-center">
+                <div class="w-1/3 bg-black flex justify-center">
+                  <div class="text-xs text-white text-center pt-2 pb-2">5</div>
+                </div>
+              </div>
+              <div class="h-20 pt-4">タイトルタイトルタイトルタイトル</div>
+              <div class="text-xs text-gray-300">2021.03.18</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">user</div>
+              </div>
+            </a>
+          </div>
+          <!-- /ランキング -->
+        </div>
+        <!-- /SP版 -->
       </div>
       <!-- /記事 -->
 
