記事上部微調整

--- a/article.html
+++ b/article.html
@@ -33,10 +33,10 @@
     <!-- メインコンテンツ -->
     <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-16 sm:mb-32">
       <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
-        <div class="text-xs text-gray-300 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
+        <div class="text-xs text-gray-300 pl-4 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
         <!-- PC版 -->
-        <div class="hidden sm:flex justify-between">
-          <div class="text-xs text-gray-300 pl-4">2021.03.18</div>
+        <div class="hidden sm:flex justify-between px-4">
+          <div class="text-xs text-gray-300">2021.03.18</div>
           <div class="flex mb-4">
             <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
             <div class="text-xs">ハピラフMAGAZINE編集部</div>
@@ -60,7 +60,7 @@
 
       <!-- 記事 -->
       <div class="col-start-2 col-end-9">
-        <div class="text-xl sm:text-4xl border-b-4 border-black pl-4 pb-2 mb-4">私の名品 #03 作家 羽田圭介「こだわりの道具に身体を縛られる」</div>
+        <div class="text-xl sm:text-4xl border-b-4 border-black px-4 pb-2 mb-4">私の名品 #03 作家 羽田圭介「こだわりの道具に身体を縛られる」</div>
         <div class="flex pl-4 mb-8">
           <div class="h-8 w-8 bg-twitter bg-cover bg-center mr-8 sm:mr-4"></div>
           <div class="h-8 w-8 bg-facebook bg-cover bg-center mr-8 sm:mr-4"></div>
