パンくず修正を削除

--- a/article.html
+++ b/article.html
@@ -33,7 +33,7 @@
     <!-- メインコンテンツ -->
     <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-16 sm:mb-32">
       <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
-        <div class="text-xs text-gray-300 pl-4 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
+        <div class="text-xs text-gray-300 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
         <!-- PC版 -->
         <div class="hidden sm:flex justify-between px-4">
           <div class="text-xs text-gray-300">2021.03.18</div>
