--- a/category.html
+++ b/category.html
@@ -54,7 +54,149 @@
       </div>
 
       <!-- カテゴリ記事 -->
-      <div></div>
+      <div class="col-start-2 col-end-8">
+        <div class="text-4xl border-b-4 border-black pl-2 pb-4 mb-12">カテゴリー名</div>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+        <a href="/" class="w-full flex mb-10">
+          <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
+            <div class="w-1/2 bg-white text-xs text-center pt-2 pb-2">category</div>
+          </div>
+          <div class="h-56 w-2/3 py-1 pl-8">
+            <div class="flex mb-1">
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+              <div class="text-xs border border-black rounded-full p-1">カテゴリ</div>
+            </div>
+            <div class="flex justify-between mb-1">
+              <div class="text-xs text-gray-300">2021.03.19</div>
+              <div class="flex">
+                <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
+                <div class="text-xs text-gray-300 ml-2">著者名</div>
+              </div>
+            </div>
+            <div class="text-2xl mb-3">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</div>
+            <div class="h-16 text-sm text-gray-400">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</div>
+          </div>
+        </a>
+      </div>
       <!-- /カテゴリ記事 -->
 
       <!-- サイドバー -->
