--- a/category.html
+++ b/category.html
@@ -31,12 +31,14 @@
     <!-- /ヘッダー -->
 
     <!-- メインコンテンツ -->
-    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-16 sm:mb-32">
-      <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
+    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 my-16 sm:mb-32">
+      <!-- パンくず-->
+      <div class="hidden sm:block col-start-2 col-end-9 pt-2 sm:pt-8">
         <div class="text-xs text-gray-300 pl-4 mb-4 sm:mb-16">Home > ファッション</div>
       </div>
-      <!-- PC版 -->
-      <div class="col-start-3 col-end-11 px-16">
+      <!-- /パンくず-->
+      <!-- PC版カテゴリ説明 -->
+      <div class="hidden sm:block col-start-3 col-end-11 px-16">
         <div class="divide-y-4 divide-black border-2 border-black py-8 px-16 mb-24">
           <div class="mb-8">「男性・女性服」、「スニーカー」、「ファッション小物」といった、ファッションに関わるものを紹介します。</div>
           <div class="flex pt-8">
@@ -47,14 +49,26 @@
             <div class="text-xs border border-black rounded-full p-1 mr-2">メガネ</div>
           </div>
         </div>
-        <!-- /PC版 -->
-
-        <!-- SP版 -->
-        <!-- /SP版 -->
       </div>
+      <!-- /PC版カテゴリ説明 -->
+
+      <!-- SP版カテゴリ説明 -->
+      <div class="sm:hidden border border-black">
+        <div class="relative px-6">
+          <div class="text-center absolute inset-x-0 -top-3 bg-white mx-24">ファッション一覧</div>
+          <div class="divide-y divide-black">
+            <div class="border-b border-black pt-16 pb-4">「男性・女性服」、「スニーカー」、「ファッション小物」といった、ファッションに関わるものを紹介します。</div>
+            <div class="flex pt-4 pb-16">
+              <div class="text-xs border border-black rounded-full p-1 mr-2">カテゴリー</div>
+              <div class="text-xs border border-black rounded-full p-1 mr-2">カテゴリー</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /SP版カテゴリ説明 -->
 
       <!-- カテゴリ記事 -->
-      <div class="col-start-2 col-end-8">
+      <div class="hidden sm:block col-start-2 col-end-8">
         <div class="text-4xl border-b-4 border-black pl-2 pb-4 mb-12">カテゴリー名</div>
         <a href="/" class="w-full flex mb-10">
           <div class="h-56 w-1/3 bg-flower bg-cover bg-center">
@@ -198,6 +212,263 @@
         </a>
       </div>
       <!-- /カテゴリ記事 -->
+
+      <!-- ライター -->
+      <div class="sm:hidden mt-16">
+        <div class="text-xl font-bold border-b-4 border-black p-2 mb-4">WRITER</div>
+        <input type="radio" name="writer-switch" checked="checked" class="hidden" id="writer-toggle-1" />
+        <div class="px-2" id="writer-articles-1">
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+        </div>
+        <input type="radio" name="writer-switch" class="hidden" id="writer-toggle-2" />
+        <div class="px-2" id="writer-articles-2">
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center"></div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+        </div>
+      </div>
+      <!-- /ライター -->
+
+      <!-- SP版スイッチ -->
+      <div class="sm:hidden flex justify-center py-8">
+        <label class="border-2 border-black bg-black text-white p-2 mr-2" for="writer-toggle-1">1</label>
+        <label class="border-2 border-black p-2 ml-2" for="writer-toggle-2">2</label>
+      </div>
+      <!-- /SP版スイッチ -->
+
+      <!-- RELATED ARTICLES -->
+      <div class="sm:hidden mb-8">
+        <div class="text-xl font-bold border-b-4 border-black p-2 mb-4">RELATED ARTICELS</div>
+        <div class="px-2">
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center">
+              <div class="w-1/3 text-xs text-white text-center bg-black py-1">1</div>
+            </div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center">
+              <div class="w-1/3 text-xs text-white text-center bg-black py-1">2</div>
+            </div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center">
+              <div class="w-1/3 text-xs text-white text-center bg-black py-1">3</div>
+            </div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center">
+              <div class="w-1/3 text-xs text-white text-center bg-black py-1">4</div>
+            </div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+          <a href="/" class="h-24 w-full flex mb-6">
+            <div class="h-full w-1/3 bg-flower bg-cover bg-center">
+              <div class="w-1/3 text-xs text-white text-center bg-black py-1">5</div>
+            </div>
+            <div class="h-full w-2/3 text-sm break-words py-1 pl-8">
+              <div class="flex mb-1">
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+                <div class="text-xs border border-black rounded-full p-1">カテゴリー</div>
+              </div>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </div>
+          </a>
+        </div>
+      </div>
+      <!-- /RELATED ARTICLES -->
+
+      <!-- カテゴリ一覧 -->
+      <div class="sm:hidden">
+        <div class="text-xl font-bold border-b-4 border-black mb-8 p-2">
+          CATEGORY
+        </div>
+        <div class="flex flex-col mb-4">
+          <a href="/category/コスメ" class="text-sm text-gray-500 font-semibold mb-2">コスメ</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">イエベ</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ブルベ</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ポーチの中身</a>
+        </div>
+        <div class="flex flex-col mb-4">
+          <a href="/category/占い・恋愛" class="text-sm text-gray-500 font-semibold mb-2">占い・恋愛</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">占い</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">恋愛</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">心理テスト</a>
+        </div>
+        <div class="flex flex-col mb-4">
+          <a href="/category/ファッション" class="text-sm text-gray-500 font-semibold mb-2">ファッション</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">韓国アパレル</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">20代向け</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">30~40代向け</a>
+        </div>
+        <div class="flex flex-col mb-4">
+          <a href="/category/ライフスタイル" class="text-sm text-gray-500 font-semibold mb-2">ライフスタイル</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">瞑想、ヨガ</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">格安SIM</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ダイエット</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">保険</a>
+        </div>
+        <div class="flex flex-col mb-4">
+          <a href="/category/ライター一覧" class="text-sm text-gray-500 font-semibold mb-2">アカウント一覧</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">節約チャンネル</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">スタディオンデマンド</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ライフスタイルチャンネル</a>
+          <a href="/" class="text-sm text-gray-400 mb-2 pl-4">ダイエットチャンネル</a>
+        </div>
+      </div>
+      <!-- /カテゴリ一覧 -->
 
       <!-- サイドバー -->
       <div class="hidden sm:block col-start-10 col-end-13 pr-16">
