--- a/article.html
+++ b/article.html
@@ -47,10 +47,9 @@
         <!-- SP版 -->
         <div class="sm:hidden mb-8">
           <div class="flex justify-between items-center mb-2">
-            <div class="text-xs text-red-300 border border-black py-1 px-4">category</div>
             <div class="flex">
               <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
-              <div class="text-xs">ハピラフMAGAZINE編集部</div>
+              <div class="text-xs text-gray-300">ハピラフMAGAZINE編集部</div>
             </div>
           </div>
           <div class="text-xs text-gray-300">2021.03.18</div>
