--- a/category.html
+++ b/category.html
@@ -39,14 +39,17 @@
       <!-- /パンくず-->
       <!-- PC版カテゴリ説明 -->
       <div class="hidden sm:block col-start-3 col-end-11 px-16">
-        <div class="divide-y-4 divide-black border-2 border-black py-8 px-16 mb-24">
-          <div class="mb-8">「男性・女性服」、「スニーカー」、「ファッション小物」といった、ファッションに関わるものを紹介します。</div>
-          <div class="flex pt-8">
-            <div class="text-xs border border-black rounded-full p-1 mr-2">スニーカー</div>
-            <div class="text-xs border border-black rounded-full p-1 mr-2">コスプレ</div>
-            <div class="text-xs border border-black rounded-full p-1 mr-2">アパレル</div>
-            <div class="text-xs border border-black rounded-full p-1 mr-2">時計</div>
-            <div class="text-xs border border-black rounded-full p-1 mr-2">メガネ</div>
+        <div class="relative">
+          <div class="text-2xl text-center absolute inset-x-0 -top-3 bg-white mx-64">ファッションの記事一覧</div>
+          <div class="divide-y-4 divide-black border-2 border-black py-8 px-16 mb-24">
+            <div class="mb-8">「男性・女性服」、「スニーカー」、「ファッション小物」といった、ファッションに関わるものを紹介します。</div>
+            <div class="flex pt-8">
+              <div class="text-xs border border-black rounded-full p-1 mr-2">スニーカー</div>
+              <div class="text-xs border border-black rounded-full p-1 mr-2">コスプレ</div>
+              <div class="text-xs border border-black rounded-full p-1 mr-2">アパレル</div>
+              <div class="text-xs border border-black rounded-full p-1 mr-2">時計</div>
+              <div class="text-xs border border-black rounded-full p-1 mr-2">メガネ</div>
+            </div>
           </div>
         </div>
       </div>
@@ -215,7 +218,7 @@
 
       <!-- ライター -->
       <div class="sm:hidden mt-16">
-        <div class="text-xl font-bold border-b-4 border-black p-2 mb-4">WRITER</div>
+        <div class="text-xl font-bold border-b-4 border-black p-2 mb-4">カテゴリー名</div>
         <input type="radio" name="writer-switch" checked="checked" class="hidden" id="writer-toggle-1" />
         <div class="px-2" id="writer-articles-1">
           <a href="/" class="h-24 w-full flex mb-6">
@@ -364,7 +367,7 @@
 
       <!-- RELATED ARTICLES -->
       <div class="sm:hidden mb-8">
-        <div class="text-xl font-bold border-b-4 border-black p-2 mb-4">RELATED ARTICELS</div>
+        <div class="text-xl font-bold border-b-4 border-black p-2 mb-4">RANKING</div>
         <div class="px-2">
           <a href="/" class="h-24 w-full flex mb-6">
             <div class="h-full w-1/3 bg-flower bg-cover bg-center">
