--- a/writer.html
+++ b/writer.html
@@ -31,61 +31,56 @@
     <!-- /ヘッダー -->
 
     <!-- メインコンテンツ -->
-    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-16 sm:mb-32">
+    <div class="sm:grid sm:grid-cols-12 px-4 sm:p-0 mb-24 sm:mb-32">
       <div  class="col-start-2 col-end-12">
         <div class="text-xs text-gray-300 pt-2 sm:pt-8 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
-        <div class="text-4xl border-b-4 border-black p-2">WRITER</div>
-        <div class="grid grid-cols-4 gap-8">
+        <div class="text-lg font-bold sm:text-4xl border-b-4 border-black p-2 mb-16 sm:mb-4">WRITER</div>
+        <div class="grid grid-cols-2 sm:grid-cols-4 gap-8">
           <div>
-            <div>ライター画像</div>
-            <div>ライター名</div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">ハピラフMAGAZINE編集部</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">長谷川賢人</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">カツセマサヒコ</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">鈴木梢</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">嘉島唯</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">宮川真実</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">木下拓海</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">五月女奈穂</div>
           </div>
           <div>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <div></div>
-            <div></div>
+            <div class="h-40 sm:h-64 bg-baby bg-cover bg-center"></div>
+            <div class="py-2">宇野維正</div>
           </div>
         </div>
       </div>
-      <div class="col-start-3 col-end-11">ここに募集</div>
+      <div class="col-start-3 col-end-11 border sm:border-2 border-black relative p-12 mt-32">
+        <div class="text-xl sm:text-3xl text-center absolute inset-x-1/3 -top-4 sm:-top-5 bg-white">ライター募集</div>
+        <div class="text-center mb-8">ハピラフMAGAZINEでは、ライターとしてメディアを一緒に盛り上げてくれる方を募集しています。</div>
+        <div class="text-center">詳しくは <a>こちらのページ</a> をご確認ください。</div>
+      </div>
     </div>
     <!-- /メインコンテンツ -->
-
 
     <!-- フッター -->
     <footer>
