著者名位置をPC,SPで統一

--- a/article.html
+++ b/article.html
@@ -35,26 +35,14 @@
       <div class="col-start-2 col-end-9 pt-2 sm:pt-8">
         <div class="text-xs text-gray-300 mb-4 sm:mb-16">Home > ライフスタイル > 瞑想・ヨガ</div>
         <!-- PC版 -->
-        <div class="hidden sm:flex justify-between px-4">
+        <div class="flex justify-between px-4">
           <div class="text-xs text-gray-300">2021.03.18</div>
           <div class="flex mb-4">
             <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
-            <div class="text-xs">ハピラフMAGAZINE編集部</div>
+            <div class="text-xs text-gray-300 sm:text-black">ハピラフMAGAZINE編集部</div>
           </div>
         </div>
         <!-- /PC版 -->
-
-        <!-- SP版 -->
-        <div class="sm:hidden mb-8">
-          <div class="flex justify-between items-center mb-2">
-            <div class="flex">
-              <div class="h-4 w-4 bg-baby bg-cover bg-center"></div>
-              <div class="text-xs text-gray-300">ハピラフMAGAZINE編集部</div>
-            </div>
-          </div>
-          <div class="text-xs text-gray-300">2021.03.18</div>
-        </div>
-        <!-- /SP版 -->
       </div>
 
       <!-- 記事 -->
